envoy-generic-proxy.yml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/"}
                route: { cluster: http_default }
          http_filters:
          - name: envoy.router
    use_original_dst: true
  - name: listener_1
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }

    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ingress_https
          cluster: tcp_default
    use_original_dst: true

  clusters:
  - name: http_default
    connect_timeout: 6s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB
    dns_lookup_family: V4_ONLY
  - name: tcp_default
    connect_timeout: 6s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB
    dns_lookup_family: V4_ONLY

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
